entity_macros/tests/ui/derive/ent/unexpected-ent-edge-id-type.stderr
error: Unexpected edge id type
  --> $DIR/unexpected-ent-edge-id-type.rs:18:14
   |
18 |     my_edge: (Id, Id),
   |              ^^^^^^^^
