entity_macros/tests/ui/derive/ent/unexpected-ent-edge-id-type.rs
use entity::{Database, Ent, Id};

#[derive(Clone, Ent)]
struct TestEnt {
    #[ent(id)]
    id: Id,

    #[ent(database)]
    database: Option<Box<dyn Database>>,

    #[ent(created)]
    created: u64,

    #[ent(last_updated)]
    last_updated: u64,

    #[ent(edge(shallow))]
    my_edge: (Id, Id),
}

fn main() {}
